fix wraping header

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@
   .header {
   grid-row: 1/2;
   display: flex;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   background-color: #F2F7FF;
